--- a/deployment/Jenkinsfile
+++ b/deployment/Jenkinsfile
@@ -47,6 +47,33 @@ sh "'${mvnHome}/bin/mvn' sonar:sonar"
 bat(/"${mvnHome}\bin\mvn" sonar:sonar/)
 }
 }
+
+stage ('Build Docker Image') {
+
+if (isUnix()) {
+
+sh "'${mvnHome}/bin/mvn' k8s:build k8s:resource"
+
+} else {
+
+bat(/"${mvnHome}\bin\mvn" k8s:build k8s:resource/)
+
+}
+
+}
+       stage ('Kubernetes Deploy') {
+
+if (isUnix()) {
+sh "'${mvnHome}/bin/mvn' k8s:deploy"
+}
+else {
+
+bat(/"${mvnHome}\bin\mvn" k8s:deploy/)
+
+}
+
+}
+
 stage('Publish') {
 def server = Artifactory.server 'Artifactory'
 def rtMaven = Artifactory.newMavenBuild()
