--- a/deployment/Jenkinsfile
+++ b/deployment/Jenkinsfile
@@ -6,9 +6,6 @@ def mvnHome
 git url: 'git@github.com:adityadand/spring-boot-devops.git', branch: 'master'
 
 
-mvnHome = tool 'mvn'
-
-}
 stage('Build') {
 
 if (isUnix()) {
@@ -16,9 +13,13 @@ if (isUnix()) {
 sh "'${mvnHome}/bin/mvn' -Dmaven.test.failure.ignore clean package"
 
 } else {
+
 bat(/"${mvnHome}\bin\mvn" -Dmaven.test.failure.ignore clean package/)
+
 }
+
 }
+
 
 stage('Unit Test') {
 
@@ -29,18 +30,40 @@ archive 'target/*.jar'
 }
 
 stage('Integration Test') {
+
+
 if (isUnix()) {
+
+
 sh "'${mvnHome}/bin/mvn' -Dmaven.test.failure.ignore clean verify"
+
+
+
+
 } else {
+
+
 bat(/"${mvnHome}\bin\mvn" -Dmaven.test.failure.ignore clean verify/)
+
+
 }
+
 }
+
+
 stage('Sonar') {
+
 if (isUnix()) {
+
 sh "'${mvnHome}/bin/mvn' sonar:sonar"
+
 } else {
+
 bat(/"${mvnHome}\bin\mvn" sonar:sonar/)
+
+
 }
+
 }
 
 stage ('Build Docker Image') {
@@ -55,12 +78,24 @@ bat(/"${mvnHome}\bin\mvn" k8s:build k8s:resource/)
 
 }
 
+
+
+
+
 }
-       stage ('Kubernetes Deploy') {
+
+       
+
+stage ('Kubernetes Deploy') {
+
+
 
 if (isUnix()) {
+
 sh "'${mvnHome}/bin/mvn' k8s:deploy"
+
 }
+
 else {
 
 bat(/"${mvnHome}\bin\mvn" k8s:deploy/)
@@ -68,14 +103,23 @@ bat(/"${mvnHome}\bin\mvn" k8s:deploy/)
 }
 
 }
-
 stage('Publish') {
+
 def server = Artifactory.server 'Artifactory'
+
 def rtMaven = Artifactory.newMavenBuild()
-rtMaven.tool = 'mvn'
+
+rtMaven.tool = 'maven'
+
 rtMaven.resolver server: server, releaseRepo: 'libs-release', snapshotRepo: 'libs-snapshot'
+
 rtMaven.deployer server: server, releaseRepo: 'libs-release-local', snapshotRepo: 'libs-snapshot-local'
+
 def buildInfo = rtMaven.run pom: 'pom.xml', goals: 'install'
+
 server.publishBuildInfo buildInfo
+
 }
+
+
 }
