--- a/deployment/Jenkinsfile
+++ b/deployment/Jenkinsfile
@@ -113,7 +113,7 @@ def server = Artifactory.server 'Artifactory'
 
 def rtMaven = Artifactory.newMavenBuild()
 
-rtMaven.tool = 'maven'
+rtMaven.tool = 'mvn'
 
 rtMaven.resolver server: server, releaseRepo: 'libs-release', snapshotRepo: 'libs-snapshot'
 
